--- a/src/components/menu-item/MenuItem.scss
+++ b/src/components/menu-item/MenuItem.scss
@@ -7,9 +7,30 @@
   justify-content: center;
   border: 1px solid black;
   margin: 0 7.5px 15px;
-  background-position: center;
-  background-size: cover;
-  
+  overflow: hidden;
+
+  &:hover {
+    cursor: pointer;
+
+    & .background-image {
+      transform: scale(1.1);
+      -webkit-transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      transition: 6s cubic-bezier(.25, .45, .45, .95);
+      -webkit-transition: 6s cubic-bezier(.25, .45, .45, .95);
+      -moz-transition: 6s cubic-bezier(.25, .45, .45, .95);
+      -ms-transition: 6s cubic-bezier(.25, .45, .45, .95);
+      -o-transition: 6s cubic-bezier(.25, .45, .45, .95);
+    }
+
+    & .content {
+      opacity: .9;
+    }
+  }
+
+
   &.large {
     height: 380px;
   }
@@ -22,6 +43,13 @@
     margin-left: 7.5px;
   }
 
+  .background-image {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-size: cover;
+  }
+
   .content {
     height: 90px;
     padding: 0 25px;
@@ -29,7 +57,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
+    border: 1px solid #272727;
+    background-color: #fff;
+    opacity: .7;
+    position: absolute;
 
     .title {
       font-weight: bold;
